@@ -574,6 +574,10 @@ name|fileExists
 argument_list|(
 name|name
 argument_list|)
+operator|:
+literal|"name="
+operator|+
+name|name
 assert|;
 name|cache
 operator|.
@@ -711,6 +715,24 @@ literal|"  to cache"
 argument_list|)
 expr_stmt|;
 block|}
+try|try
+block|{
+name|delegate
+operator|.
+name|deleteFile
+argument_list|(
+name|name
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ioe
+parameter_list|)
+block|{
+comment|// This is fine: file may not exist
+block|}
 return|return
 name|cache
 operator|.
@@ -724,6 +746,24 @@ return|;
 block|}
 else|else
 block|{
+try|try
+block|{
+name|cache
+operator|.
+name|deleteFile
+argument_list|(
+name|name
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ioe
+parameter_list|)
+block|{
+comment|// This is fine: file may not exist
+block|}
 return|return
 name|delegate
 operator|.
@@ -973,6 +1013,11 @@ parameter_list|()
 throws|throws
 name|IOException
 block|{
+comment|// NOTE: technically we shouldn't have to do this, ie,
+comment|// IndexWriter should have sync'd all files, but we do
+comment|// it for defensive reasons... or in case the app is
+comment|// doing something custom (creating outputs directly w/o
+comment|// using IndexWriter):
 for|for
 control|(
 name|String
@@ -1054,6 +1099,16 @@ operator|<=
 name|maxCachedBytes
 return|;
 block|}
+DECL|field|uncacheLock
+specifier|private
+specifier|final
+name|Object
+name|uncacheLock
+init|=
+operator|new
+name|Object
+argument_list|()
+decl_stmt|;
 DECL|method|unCache
 specifier|private
 name|void
@@ -1065,10 +1120,56 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-specifier|final
+comment|// Only let one thread uncache at a time; this only
+comment|// happens during commit() or close():
 name|IndexOutput
 name|out
+init|=
+literal|null
 decl_stmt|;
+name|IndexInput
+name|in
+init|=
+literal|null
+decl_stmt|;
+try|try
+block|{
+synchronized|synchronized
+init|(
+name|uncacheLock
+init|)
+block|{
+if|if
+condition|(
+name|VERBOSE
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+literal|"nrtdir.unCache name="
+operator|+
+name|fileName
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+operator|!
+name|cache
+operator|.
+name|fileExists
+argument_list|(
+name|fileName
+argument_list|)
+condition|)
+block|{
+comment|// Another thread beat us...
+return|return;
+block|}
 name|IOContext
 name|context
 init|=
@@ -1076,14 +1177,8 @@ name|IOContext
 operator|.
 name|DEFAULT
 decl_stmt|;
-synchronized|synchronized
-init|(
-name|this
-init|)
-block|{
 if|if
 condition|(
-operator|!
 name|delegate
 operator|.
 name|fileExists
@@ -1092,14 +1187,18 @@ name|fileName
 argument_list|)
 condition|)
 block|{
-assert|assert
-name|cache
-operator|.
-name|fileExists
+throw|throw
+operator|new
+name|IOException
 argument_list|(
+literal|"cannot uncache file=\""
+operator|+
 name|fileName
+operator|+
+literal|"\": it was separately also created in the delegate directory"
 argument_list|)
-assert|;
+throw|;
+block|}
 name|out
 operator|=
 name|delegate
@@ -1111,29 +1210,6 @@ argument_list|,
 name|context
 argument_list|)
 expr_stmt|;
-block|}
-else|else
-block|{
-name|out
-operator|=
-literal|null
-expr_stmt|;
-block|}
-block|}
-if|if
-condition|(
-name|out
-operator|!=
-literal|null
-condition|)
-block|{
-name|IndexInput
-name|in
-init|=
-literal|null
-decl_stmt|;
-try|try
-block|{
 name|in
 operator|=
 name|cache
@@ -1157,6 +1233,23 @@ name|length
 argument_list|()
 argument_list|)
 expr_stmt|;
+comment|// Lock order: uncacheLock -> this
+synchronized|synchronized
+init|(
+name|this
+init|)
+block|{
+comment|// Must sync here because other sync methods have
+comment|// if (cache.fileExists(name)) { ... } else { ... }:
+name|cache
+operator|.
+name|deleteFile
+argument_list|(
+name|fileName
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 finally|finally
 block|{
@@ -1169,20 +1262,6 @@ argument_list|,
 name|out
 argument_list|)
 expr_stmt|;
-block|}
-synchronized|synchronized
-init|(
-name|this
-init|)
-block|{
-name|cache
-operator|.
-name|deleteFile
-argument_list|(
-name|fileName
-argument_list|)
-expr_stmt|;
-block|}
 block|}
 block|}
 block|}
