@@ -1061,6 +1061,107 @@ operator|=
 literal|"partially truncated"
 expr_stmt|;
 comment|// Partially Truncate the file:
+comment|// First, make temp file and copy only half this
+comment|// file over:
+name|String
+name|tempFileName
+decl_stmt|;
+while|while
+condition|(
+literal|true
+condition|)
+block|{
+name|tempFileName
+operator|=
+literal|""
+operator|+
+name|randomState
+operator|.
+name|nextInt
+argument_list|()
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|delegate
+operator|.
+name|fileExists
+argument_list|(
+name|tempFileName
+argument_list|)
+condition|)
+block|{
+break|break;
+block|}
+block|}
+specifier|final
+name|IndexOutput
+name|tempOut
+init|=
+name|delegate
+operator|.
+name|createOutput
+argument_list|(
+name|tempFileName
+argument_list|,
+name|LuceneTestCase
+operator|.
+name|newIOContext
+argument_list|(
+name|randomState
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|IndexInput
+name|in
+init|=
+name|delegate
+operator|.
+name|openInput
+argument_list|(
+name|name
+argument_list|,
+name|LuceneTestCase
+operator|.
+name|newIOContext
+argument_list|(
+name|randomState
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|tempOut
+operator|.
+name|copyBytes
+argument_list|(
+name|in
+argument_list|,
+name|in
+operator|.
+name|length
+argument_list|()
+operator|/
+literal|2
+argument_list|)
+expr_stmt|;
+name|tempOut
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|in
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+comment|// Delete original and copy bytes back:
+name|deleteFile
+argument_list|(
+name|name
+argument_list|,
+literal|true
+argument_list|)
+expr_stmt|;
+specifier|final
 name|IndexOutput
 name|out
 init|=
@@ -1078,22 +1179,50 @@ name|randomState
 argument_list|)
 argument_list|)
 decl_stmt|;
+name|in
+operator|=
+name|delegate
+operator|.
+name|openInput
+argument_list|(
+name|tempFileName
+argument_list|,
+name|LuceneTestCase
+operator|.
+name|newIOContext
+argument_list|(
+name|randomState
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|out
 operator|.
-name|setLength
+name|copyBytes
 argument_list|(
-name|fileLength
-argument_list|(
-name|name
-argument_list|)
-operator|/
-literal|2
+name|in
+argument_list|,
+name|in
+operator|.
+name|length
+argument_list|()
 argument_list|)
 expr_stmt|;
 name|out
 operator|.
 name|close
 argument_list|()
+expr_stmt|;
+name|in
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|deleteFile
+argument_list|(
+name|tempFileName
+argument_list|,
+literal|true
+argument_list|)
 expr_stmt|;
 block|}
 elseif|else
