@@ -5252,31 +5252,6 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-return|return
-name|newDirectory
-argument_list|(
-name|r
-argument_list|,
-literal|true
-argument_list|)
-return|;
-block|}
-comment|/**    * Returns a new Directory instance, using the specified random. You    * can specify maybeWrap as to whether the directory might be also    * wrapped by NRTCachingDirectory or FileSwitchDirectory    * See {@link #newDirectory()} for more information.    */
-DECL|method|newDirectory
-specifier|public
-specifier|static
-name|MockDirectoryWrapper
-name|newDirectory
-parameter_list|(
-name|Random
-name|r
-parameter_list|,
-name|boolean
-name|maybeWrap
-parameter_list|)
-throws|throws
-name|IOException
-block|{
 name|Directory
 name|impl
 init|=
@@ -5295,16 +5270,12 @@ name|MockDirectoryWrapper
 argument_list|(
 name|r
 argument_list|,
-name|maybeWrap
-condition|?
 name|maybeNRTWrap
 argument_list|(
 name|r
 argument_list|,
 name|impl
 argument_list|)
-else|:
-name|impl
 argument_list|)
 decl_stmt|;
 name|stores
@@ -5352,8 +5323,6 @@ argument_list|(
 name|random
 argument_list|,
 name|d
-argument_list|,
-literal|true
 argument_list|)
 return|;
 block|}
@@ -5391,36 +5360,6 @@ name|f
 parameter_list|,
 name|LockFactory
 name|lf
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-return|return
-name|newFSDirectory
-argument_list|(
-name|f
-argument_list|,
-name|lf
-argument_list|,
-literal|true
-argument_list|)
-return|;
-block|}
-comment|/** Returns a new FSDirectory instance over the given file, which must be a folder. */
-DECL|method|newFSDirectory
-specifier|public
-specifier|static
-name|MockDirectoryWrapper
-name|newFSDirectory
-parameter_list|(
-name|File
-name|f
-parameter_list|,
-name|LockFactory
-name|lf
-parameter_list|,
-name|boolean
-name|maybeWrap
 parameter_list|)
 throws|throws
 name|IOException
@@ -5526,16 +5465,12 @@ name|MockDirectoryWrapper
 argument_list|(
 name|random
 argument_list|,
-name|maybeWrap
-condition|?
 name|maybeNRTWrap
 argument_list|(
 name|random
 argument_list|,
 name|fsdir
 argument_list|)
-else|:
-name|fsdir
 argument_list|)
 decl_stmt|;
 if|if
@@ -5606,9 +5541,6 @@ name|r
 parameter_list|,
 name|Directory
 name|d
-parameter_list|,
-name|boolean
-name|maybeWrap
 parameter_list|)
 throws|throws
 name|IOException
@@ -5659,16 +5591,12 @@ name|MockDirectoryWrapper
 argument_list|(
 name|r
 argument_list|,
-name|maybeWrap
-condition|?
 name|maybeNRTWrap
 argument_list|(
 name|r
 argument_list|,
 name|impl
 argument_list|)
-else|:
-name|impl
 argument_list|)
 decl_stmt|;
 name|stores
